--- a/src/Landing_Pages/Navigation_Bar/NavigationBar.css
+++ b/src/Landing_Pages/Navigation_Bar/NavigationBar.css
@@ -72,27 +72,31 @@ nav .right img{
 
 /*RESPONSIVE*/
 @media screen and (max-width: 1025px) {
-    nav .center{
+    nav > .center{
       display: none;
     }
-    nav .left{
+    nav > .left{
        width: 50%;
+       justify-content: flex-start;
     }
-    nav .right{
+    nav > .left img{
+        margin-left: 15%;
+    }
+    nav > .right{
         width: 50%;
         justify-content: flex-end;
     }
-    nav .right span,nav .right .signup_btn{
+    nav > .right span,nav .right .signup_btn{
         display: none;
     }
-    nav .right img{
+    nav > .right img{
         display: block;
         margin-right: 15%;
         height: 45px;
         width: auto;
         transition: .1s ease-in;
     }
-    nav .right img:hover{
+    nav > .right img:hover{
         cursor: pointer;
         opacity: 70%;
     }
