--- a/src/Landing_Pages/Navigation_Bar/NavigationBar.css
+++ b/src/Landing_Pages/Navigation_Bar/NavigationBar.css
@@ -24,7 +24,7 @@ nav .center{
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 nav .center span{
     font-weight: 800;
