--- a/src/Assets/Styles/global.css
+++ b/src/Assets/Styles/global.css
@@ -27,6 +27,9 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:window-inactive {
     background: transparent; 
 }
+p,h1{
+    margin: 0;
+}
 
 
 button:hover{
